--- a/css/style.css
+++ b/css/style.css
@@ -17,13 +17,16 @@ body {
 
 /* table section */
 
+.headshot{
+  border-radius: 50%;
+}
+
 .test_container {
   display: flex;
-
 }
 
 .box1 {
-  height: 100px;
+  height: auto;
   width: 30%;
   background-color: var(--secondary) ;
   margin-left: 10%;
@@ -33,17 +36,32 @@ body {
   padding-top: 10px
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
 .box2 {
-  height: 100px;
+  height: auto;
   width: 49%;
   background-color: var(--secondary) ;
   margin-bottom: 1%;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  /*box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);*/
   border-radius: 5px;
+  text-align: left;
+  padding-top: 10px;
+  padding-left: 5px;
+  padding-right: 5px;
 
 }
 
+.box2 h3 {
+  font-weight: bold;
+}
+
+.flexx {
+  display: flex;
+}
 
 .table_section table {
   border-collapse: collapse;
