--- a/css/style.scss
+++ b/css/style.scss
@@ -1,8 +1,8 @@
-$white: #ffffff;
-$black: #252525;
-$primary1: #1cbbb4;
-$primary2: #1a2e35;
-$btnColor: #ff4f5a;
+$white: #FFFFFF;
+$black: #0D1B2A;
+$primary1: #00BFA6;
+$primary2: #0D1B2A;
+$btnColor: #00BFA6;
 
 @mixin main-font {
   font-family: 'Poppins', sans-serif;
